compile and run files with ps1 scripts